<resources>
    <string name="app_name">KaiEr</string>

    <!--home-->
    <string name="calculation">计算</string>
    <string name="ware_house">仓库</string>
    <string name="product">产品</string>
    <string name="user">个人</string>
    <string name="empty_text">什么都没有哦，赶紧去进货吧！！！</string>

    <!--个人-->
    <string name="user_level">个人等级</string>
    <string name="default_product">还原产品</string>
    <string name="about_us">关于我们</string>
    <string name="submission">意见投稿</string>
    <string name="total_profit">总&#8194;盈&#8194;利：%1$d元</string>
    <string name="today_profit">今日盈利：%1$d元</string>

    <!--仓库-->
    <string name="amount_of_money">仓库总金额：%1$d元</string>
    <string name="out_warehouse">出库</string>
    <string name="input_warehouse">入库</string>

    <!--计算-->
    <string name="clear">清除</string>
    <string name="amount">数量:</string>
    <string name="agent_level">代理等级:</string>
    <string name="product1">产品:</string>
    <string name="add_to_calculation">添加到计算</string>

    <!--产品-->
    <string name="size">规格：</string>
    <string name="box">包/箱</string>
    <string name="empty_info">还没有录入产品信息，点击此处录入！</string>
</resources>
