<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_comment_title" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height40"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin30"
        android:background="@drawable/edittext_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height1"
        android:layout_marginBottom="@dimen/margin10"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/calculate_input"
            android:layout_width="0dp"
            android:layout_height="@dimen/height120"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_calculation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:text="@string/calculation"
                android:textSize="@dimen/text_size18" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/height1"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:text="@string/clear"
                android:textSize="@dimen/text_size18" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height1"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height40"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/product1"
            android:textSize="@dimen/text_size14" />

        <Spinner
            android:id="@+id/spinner_product"
            android:layout_width="0dp"
            android:layout_height="@dimen/height30"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin90"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height40"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/amount"
            android:textSize="@dimen/text_size14" />

        <EditText
            android:id="@+id/amount_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/height30"
            android:layout_marginStart="@dimen/margin90"
            android:layout_weight="5"
            android:background="@drawable/edittext_bg"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinner_box"
            android:layout_width="0dp"
            android:layout_height="@dimen/height30"
            android:layout_marginStart="@dimen/margin10"
            android:layout_weight="3"
            android:background="@drawable/edittext_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height40"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/agent_level"
            android:textSize="@dimen/text_size14" />

        <Spinner
            android:id="@+id/spinner_agent_level"
            android:layout_width="0dp"
            android:layout_height="@dimen/height30"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin60"
            android:layout_weight="0.62"
            android:background="@drawable/edittext_bg" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_to_calucation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height40"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/edittext_bg"
        android:text="@string/add_to_calculation" />
</LinearLayout>
